fe-piattaforma/k8s/deployment.tmp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${K8S_NAMESPACE}
  name: fe-piattaforma-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fe-piattaforma
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fe-piattaforma
    spec:
      containers:
        - name: fe-piattaforma
          image: ${ECR_REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: "1024Mi"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${K8S_NAMESPACE}
  name: service-ingress-fe-${K8S_NAMESPACE}
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: fe-piattaforma
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${K8S_NAMESPACE}
  name: ingress-fe-${K8S_NAMESPACE}
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.redirect-https: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: alb.facilita.repubblicadigitale.gov.it
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-fe-${K8S_NAMESPACE}
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - facilita.repubblicadigitale.gov.it
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: redirect-https
              port: 
                name: use-annotation
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-ingress-fe-${K8S_NAMESPACE}
              port:
                number: 80
